testdata/baselines/reference/submodule/conformance/jsContainerMergeTsDeclaration2.errors.txt
b.js(1,3): error TS2339: Property 'prototype' does not exist on type 'typeof C'.
b.js(2,1): error TS2322: Type 'number' is not assignable to type '() => void'.


==== a.d.ts (0 errors) ====
    declare namespace C {
        function bar(): void
    }
==== b.js (2 errors) ====
    C.prototype = {};
      ~~~~~~~~~
!!! error TS2339: Property 'prototype' does not exist on type 'typeof C'.
    C.bar = 2;
    ~~~~~
!!! error TS2322: Type 'number' is not assignable to type '() => void'.
    